// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useConnectionParameters() should return parameters for an incoming call 1`] = `
{
  "customerName": "Bob",
  "customerPhoneNumber": "+14158880101",
  "integrationId": 1,
  "rejectCallOnDecline": false,
  "ticketId": 2,
}
`;

exports[`useConnectionParameters() should return parameters for an outgoing call 1`] = `
{
  "customerName": "Bob",
  "customerPhoneNumber": "+14158880101",
  "integrationId": 1,
  "rejectCallOnDecline": false,
  "ticketId": null,
}
`;
